tests/fixtures/type_checker/pass/string_literal_null_comparison.galaxy
void test_string_literal_null_comparison()
{
    string a;
    bool b = a == null;
    bool c = "" == null;
}
