tests/fixtures/type_checker/error/call_arguments_expected.galaxy
void call(int p1, string p2)
{
}

void call_arguments_expected()
{
    call(1);
}
